# kloc-full

./: .gitignore  README.md  analyze_edges.py  analyze_return_boundaries.py  build.sh  final_analysis.py  find_meaningful_cases.py  find_return_boundary_cases.py  kloc-dev.sh  kloc.sh  notes.md  previous_issues.md  repos.yml  return_boundary_analysis.txt  setup.sh
docs/: summary.md  (+3 more)
kloc-intelligence/: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
kloc-intelligence/benchmarks/: benchmark_queries.py
kloc-intelligence/docker/: Dockerfile  docker-compose.yml  neo4j.conf
kloc-intelligence/docs/: MIGRATION.md
kloc-intelligence/src/: __init__.py  cli.py  config.py
kloc-intelligence/tests/: __init__.py  benchmark_import.py  conftest.py  diff_report.py  snapshot_compare.py  test_benchmark.py  test_class_context.py  test_cli_context.py  test_comparator.py  test_config.py  test_connection.py  test_contract.py  test_definition.py  test_deps.py  test_edge_cases.py  test_graph_helpers.py  test_handlers.py  test_import.py  test_inherit.py  test_interface_context.py  test_json_formatter.py  test_method_context.py  test_output.py  test_output_format.py  test_output_model.py  test_overrides.py  test_owners.py  test_parser.py  test_property_context.py  test_query_runner.py  test_reference_types.py  test_resolve.py  test_result_mapper.py  test_schema.py  test_snapshot.py  test_usages.py  test_usages_flat.py  test_usages_result.py  test_usages_tree.py  test_value_context.py
scip-php-rust/: Cargo.toml  README.md
(+276 files in other folders)
