[project]
name = "kloc-intelligence"
version = "0.1.0"
description = "Graph-native code intelligence platform backed by Neo4j"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0,<7.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "msgspec>=0.18.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
kloc-intelligence = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "snapshot: Snapshot comparison tests (require Neo4j + test data)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
]
