[package]
name = "scip-php-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-php = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
dashmap = "6"
walkdir = "2"
regex = "1"
anyhow = "1"
rustc-hash = "2"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tempfile = "=3.14.0"

[profile.release]
opt-level = 3
lto = "thin"
